# robot_bouncer

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  pyproject.toml  robot_bouncer.toml
examples/: display_board.py  minimal_movement.py
robot_bouncer/: __init__.py  app.py  board.py  cli.py  game.py
robot_bouncer/core/: __init__.py  engine.py  entities.py  layouts.py
robot_bouncer/data/: default_layout.json
robot_bouncer/examples/: __init__.py  display_board.py  pyqt_show_grid.py
robot_bouncer/solver/: __init__.py  base.py  bfs.py
robot_bouncer/visuals/: __init__.py  base.py  console.py  grid.py  pyqt.py
src/robot_bouncer/: __init__.py
src/robot_bouncer/adapters/repositories/: in_memory.py
src/robot_bouncer/config/: settings.py
src/robot_bouncer/domain/: __init__.py  board.py  entities.py  exceptions.py
src/robot_bouncer/interfaces/http/: app.py
src/robot_bouncer/interfaces/http/static/: index.html  main.js  styles.css
src/robot_bouncer/services/: guard_service.py
tests/: test_board.py
tests/integration/: test_http_app.py
tests/unit/: test_board.py  test_guard_service.py
